Modified AP and DHCP controller, resource, collection, and routes
